fix(padding): add padding and semantic tag

--- a/Praktikum-1/index.html
+++ b/Praktikum-1/index.html
@@ -8,18 +8,16 @@
     <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
-    <div class="section navigation">
-        <div class="brand">
-            <img srcset="assets/images/logo-icon-normal.png 1x, assets/images/logo-icon-normal@2x.png 2x" alt="PAW Logo">
-        </div>
+    <header class="section navigation">
+        <img srcset="assets/images/logo-icon-normal.png 1x, assets/images/logo-icon-normal@2x.png 2x" alt="PAW Logo">
         <nav>
             <a href="#" class="active">Beranda</a>
             <a href="#">Kurikulum</a>
             <a href="#">Persiapan</a>
             <a href="#" class="button">Mulai</a>
         </nav>
-    </div>
-    <div class="section hero">
+    </header>
+    <section class="section hero">
         <div class="description">
             <h1>
                 Membuat Web itu 
@@ -35,6 +33,6 @@
         <img class="pattern pattern--left" srcset="assets/images/img-pattern.png 1x, assets/images/img-pattern@2x.png 2x" alt="Pattern Background">
         <img class="pattern pattern--right" srcset="assets/images/img-pattern2.png 1x, assets/images/img-pattern2@2x.png 2x" alt="Pattern Background">
         <!-- end of Background Pattern -->
-    </div>
+    </section>
 </body>
 </html>
