fix(sample): fix sample praktikum 2 exclude event on js add padding on list of todo

--- a/Praktikum 2/index.html
+++ b/Praktikum 2/index.html
@@ -9,13 +9,13 @@
         <p>Your todo for today (21 September 2022)</p>
         <div>
             <input id="create" type="checkbox" value="create"> 
-            <label for="create" onclick="strikeOutText(event, this)">
+            <label for="create" onclick="strikeOutText(this)">
                 Create Layout
             </label>
         </div>
         <div>
             <input id="manipulate" type="checkbox" value="manipulate"> 
-            <label for="manipulate" onclick="strikeOutText(event, this)">
+            <label for="manipulate" onclick="strikeOutText(this)">
                 Manipulate DOM using javascript
             </label>
         </div>
